# aeronitium

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: release-drafter.yml
.github/workflows/: release.yml  upload.yaml
adapter/: .gitignore  Cargo.toml  README.md  pubspec.yaml
adapter/src/: error.rs  main.rs  transfer.rs
src/: main.rs
src/app/: configs.rs  error.rs  middlewares.rs  mod.rs  models.rs  routers.rs
src/app/components/: container.rs  info.rs  mod.rs  sidebar.rs
src/app/decoders/: mod.rs  response_code.rs  response_error.rs  response_type.rs
src/app/errors/: enverror.rs  ioerror.rs  mod.rs  responses.rs  sliceerror.rs
src/app/handlers/: changeunit.rs  connscanner.rs  daqparams.rs  eeprom.rs  firmware.rs  mod.rs  rezero.rs  root.rs  scanlist.rs  scannerstatus.rs  simplesetup.rs  startstream.rs  stopstream.rs  streamsensor.rs  tablecoef.rs  version.rs
src/app/helpers/: calzero.rs  chgunit.rs  display.rs  firmware.rs  initialization.rs  liveaction.rs  mod.rs  output.rs  process.rs  simplesetup.rs  startarray.rs  startstream.rs  stopstream.rs  stream.rs
src/app/layouts/: default.rs
src/app/pages/: coef_page.rs  connscanner_page.rs  daqparam_page.rs  firmware_page.rs  mod.rs  printcoef_page.rs  root.rs  scannerlist_page.rs  status_page.rs  stream_page.rs  unit_page.rs
src/dtc/: mod.rs  routers.rs
src/dtc/handlers/: dtc.rs  mod.rs
ui/: README.md  package-lock.json  package.json  quasar.conf.js
ui/src-electron/icons/: icon.icns
ui/src-electron/main-process/: electron-main.js
ui/src/components/banner/: banner.js  banner.vue
ui/src/components/link/: MainLink.vue  link.js
ui/src/css/: app.scss
ui/src/css/includes/: _base.scss  _card.sass  _typography.scss
ui/src/pages/home/: Home.vue  (+1 more)
ui/src/router/: routes.js
ui/src/store/: index.js
(+13 files in other folders)
