[package]
name = "aeronitium"
version = "0.2.0"
authors = ["akbarpn136 <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "adapter",
]

[dependencies]
actix-web = "3"
chrono = "0.4"
dotenv = "0.15"
async-nats = "0.9"
actix-cors = "0.5"
derive_more = "0.99"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
