[package]
name = "adapter"
version = "0.2.0"
authors = ["akbarpn136 <akbarpn136@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
async-nats = "0.9"
futures-util = "0.3"
tokio-tungstenite = "0.14"
tokio = { version = "1.4", features = ["full"] }
